// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Menu should match snapshot with id 1`] = `
<Menu
  ariaLabel="Main Menu"
  id="test-id"
  mobile={false}
>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="recentMentions"
      onClick={[Function]}
      show={false}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={false}
      id="flaggedPosts"
      onClick={[Function]}
      show={false}
      text="Flagged Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="accountSettings"
      modalId="user_settings"
      show={true}
      text="Account Settings"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemToggleModalRedux
          dialogType={[Function]}
          icon={false}
          id="sendEmailInvite"
          modalId="email_invite"
          show={false}
          text="Send Email Invite"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemAction
          icon={false}
          id="getTeamInviteLink"
          onClick={[Function]}
          show={false}
          text="Get Team Invite Link"
        />
      </Connect(TeamPermissionGate)>
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addUsersToTeam"
        modalId="add_user_to_team"
        show={true}
        text="Add Members to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="teamSettings"
        modalId="team_settings"
        show={true}
        text="Team Settings"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={[Function]}
        icon={false}
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="manageMembers"
      modalId="team_members"
      show={true}
      text="Manage Members"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "create_team",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="createTeam"
        show={true}
        text="Create a New Team"
        to="/create_team"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={false}
      id="joinTeam"
      show={false}
      text="Join Another Team"
      to="/select_team"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="leaveTeam"
      modalId="leave_team"
      show={true}
      text="Leave Team"
    />
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_slash_commands",
          "manage_oauth",
          "manage_incoming_webhooks",
          "manage_outgoing_webhooks",
        ]
      }
      teamId="team-id"
    >
      <MenuItemLink
        id="integrations"
        show={false}
        text="Integrations"
        to="/team name/integrations"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemLink
      id="customEmojis"
      show={false}
      text="Custom Emoji"
      to="/team name/emoji"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "manage_system",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="systemConsole"
        show={true}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemExternalLink
      icon={false}
      id="helpLink"
      show={false}
      text="Help"
      url={null}
    />
    <MenuItemAction
      id="keyboardShortcuts"
      onClick={[Function]}
      show={true}
      text="Keyboard Shortcuts"
    />
    <MenuItemExternalLink
      icon={false}
      id="reportLink"
      show={false}
      text="Report a Problem"
      url={null}
    />
    <MenuItemExternalLink
      icon={false}
      id="nativeAppLink"
      show={null}
      text="Download Apps"
      url={null}
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="about"
      modalId="about"
      show={true}
      text="About Mattermost"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="logout"
      onClick={[Function]}
      show={true}
      text="Logout"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing disabled 1`] = `
<Menu
  ariaLabel="Main Menu"
  mobile={false}
>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="recentMentions"
      onClick={[Function]}
      show={false}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={false}
      id="flaggedPosts"
      onClick={[Function]}
      show={false}
      text="Flagged Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="accountSettings"
      modalId="user_settings"
      show={true}
      text="Account Settings"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemToggleModalRedux
          dialogType={[Function]}
          icon={false}
          id="sendEmailInvite"
          modalId="email_invite"
          show={false}
          text="Send Email Invite"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemAction
          icon={false}
          id="getTeamInviteLink"
          onClick={[Function]}
          show={false}
          text="Get Team Invite Link"
        />
      </Connect(TeamPermissionGate)>
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addUsersToTeam"
        modalId="add_user_to_team"
        show={true}
        text="Add Members to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="teamSettings"
        modalId="team_settings"
        show={true}
        text="Team Settings"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={[Function]}
        icon={false}
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="manageMembers"
      modalId="team_members"
      show={true}
      text="Manage Members"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "create_team",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="createTeam"
        show={true}
        text="Create a New Team"
        to="/create_team"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={false}
      id="joinTeam"
      show={false}
      text="Join Another Team"
      to="/select_team"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="leaveTeam"
      modalId="leave_team"
      show={true}
      text="Leave Team"
    />
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_slash_commands",
          "manage_oauth",
          "manage_incoming_webhooks",
          "manage_outgoing_webhooks",
        ]
      }
      teamId="team-id"
    >
      <MenuItemLink
        id="integrations"
        show={false}
        text="Integrations"
        to="/team name/integrations"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemLink
      id="customEmojis"
      show={false}
      text="Custom Emoji"
      to="/team name/emoji"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "manage_system",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="systemConsole"
        show={true}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemExternalLink
      icon={false}
      id="helpLink"
      show={false}
      text="Help"
      url={null}
    />
    <MenuItemAction
      id="keyboardShortcuts"
      onClick={[Function]}
      show={true}
      text="Keyboard Shortcuts"
    />
    <MenuItemExternalLink
      icon={false}
      id="reportLink"
      show={false}
      text="Report a Problem"
      url={null}
    />
    <MenuItemExternalLink
      icon={false}
      id="nativeAppLink"
      show={null}
      text="Download Apps"
      url={null}
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="about"
      modalId="about"
      show={true}
      text="About Mattermost"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="logout"
      onClick={[Function]}
      show={true}
      text="Logout"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing disabled in mobile 1`] = `
<Menu
  ariaLabel="Main Menu"
  mobile={true}
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="mentions"
        >
          @
        </i>
      }
      id="recentMentions"
      onClick={[Function]}
      show={true}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={
        <i
          className="fa fa-flag"
        />
      }
      id="flaggedPosts"
      onClick={[Function]}
      show={true}
      text="Flagged Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-cog"
        />
      }
      id="accountSettings"
      modalId="user_settings"
      show={true}
      text="Account Settings"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemToggleModalRedux
          dialogType={[Function]}
          icon={
            <i
              className="fa fa-user-plus"
            />
          }
          id="sendEmailInvite"
          modalId="email_invite"
          show={false}
          text="Send Email Invite"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemAction
          icon={
            <i
              className="fa fa-link"
            />
          }
          id="getTeamInviteLink"
          onClick={[Function]}
          show={false}
          text="Get Team Invite Link"
        />
      </Connect(TeamPermissionGate)>
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addUsersToTeam"
        modalId="add_user_to_team"
        show={true}
        text="Add Members to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-globe"
          />
        }
        id="teamSettings"
        modalId="team_settings"
        show={true}
        text="Team Settings"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-users"
        />
      }
      id="manageMembers"
      modalId="team_members"
      show={true}
      text="Manage Members"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "create_team",
        ]
      }
    >
      <MenuItemLink
        icon={
          <i
            className="fa fa-plus-square"
          />
        }
        id="createTeam"
        show={true}
        text="Create a New Team"
        to="/create_team"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={
        <i
          className="fa fa-plus-square"
        />
      }
      id="joinTeam"
      show={false}
      text="Join Another Team"
      to="/select_team"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={<LeaveTeamIcon />}
      id="leaveTeam"
      modalId="leave_team"
      show={true}
      text="Leave Team"
    />
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_slash_commands",
          "manage_oauth",
          "manage_incoming_webhooks",
          "manage_outgoing_webhooks",
        ]
      }
      teamId="team-id"
    >
      <MenuItemLink
        id="integrations"
        show={false}
        text="Integrations"
        to="/team name/integrations"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemLink
      id="customEmojis"
      show={false}
      text="Custom Emoji"
      to="/team name/emoji"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "manage_system",
        ]
      }
    >
      <MenuItemLink
        icon={
          <i
            className="fa fa-wrench"
          />
        }
        id="systemConsole"
        show={false}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-question"
        />
      }
      id="helpLink"
      show={false}
      text="Help"
      url={null}
    />
    <MenuItemAction
      id="keyboardShortcuts"
      onClick={[Function]}
      show={false}
      text="Keyboard Shortcuts"
    />
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-phone"
        />
      }
      id="reportLink"
      show={false}
      text="Report a Problem"
      url={null}
    />
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-mobile"
        />
      }
      id="nativeAppLink"
      show={null}
      text="Download Apps"
      url={null}
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-info"
        />
      }
      id="about"
      modalId="about"
      show={true}
      text="About Mattermost"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="fa fa-sign-out"
        />
      }
      id="logout"
      onClick={[Function]}
      show={true}
      text="Logout"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing enabled 1`] = `
<Menu
  ariaLabel="Main Menu"
  mobile={false}
>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="recentMentions"
      onClick={[Function]}
      show={false}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={false}
      id="flaggedPosts"
      onClick={[Function]}
      show={false}
      text="Flagged Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="accountSettings"
      modalId="user_settings"
      show={true}
      text="Account Settings"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemToggleModalRedux
          dialogType={[Function]}
          icon={false}
          id="sendEmailInvite"
          modalId="email_invite"
          show={true}
          text="Send Email Invite"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemAction
          icon={false}
          id="getTeamInviteLink"
          onClick={[Function]}
          show={true}
          text="Get Team Invite Link"
        />
      </Connect(TeamPermissionGate)>
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addUsersToTeam"
        modalId="add_user_to_team"
        show={true}
        text="Add Members to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="teamSettings"
        modalId="team_settings"
        show={true}
        text="Team Settings"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={[Function]}
        icon={false}
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="manageMembers"
      modalId="team_members"
      show={true}
      text="Manage Members"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "create_team",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="createTeam"
        show={true}
        text="Create a New Team"
        to="/create_team"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={false}
      id="joinTeam"
      show={false}
      text="Join Another Team"
      to="/select_team"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="leaveTeam"
      modalId="leave_team"
      show={true}
      text="Leave Team"
    />
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_slash_commands",
          "manage_oauth",
          "manage_incoming_webhooks",
          "manage_outgoing_webhooks",
        ]
      }
      teamId="team-id"
    >
      <MenuItemLink
        id="integrations"
        show={true}
        text="Integrations"
        to="/team name/integrations"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemLink
      id="customEmojis"
      show={true}
      text="Custom Emoji"
      to="/team name/emoji"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "manage_system",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="systemConsole"
        show={true}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemExternalLink
      icon={false}
      id="helpLink"
      show={true}
      text="Help"
      url="test-link-help"
    />
    <MenuItemAction
      id="keyboardShortcuts"
      onClick={[Function]}
      show={true}
      text="Keyboard Shortcuts"
    />
    <MenuItemExternalLink
      icon={false}
      id="reportLink"
      show={true}
      text="Report a Problem"
      url="test-report-link"
    />
    <MenuItemExternalLink
      icon={false}
      id="nativeAppLink"
      show={true}
      text="Download Apps"
      url="test"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="about"
      modalId="about"
      show={true}
      text="About Mattermost"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="logout"
      onClick={[Function]}
      show={true}
      text="Logout"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing enabled in mobile 1`] = `
<Menu
  ariaLabel="Main Menu"
  mobile={true}
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="mentions"
        >
          @
        </i>
      }
      id="recentMentions"
      onClick={[Function]}
      show={true}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={
        <i
          className="fa fa-flag"
        />
      }
      id="flaggedPosts"
      onClick={[Function]}
      show={true}
      text="Flagged Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-cog"
        />
      }
      id="accountSettings"
      modalId="user_settings"
      show={true}
      text="Account Settings"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemToggleModalRedux
          dialogType={[Function]}
          icon={
            <i
              className="fa fa-user-plus"
            />
          }
          id="sendEmailInvite"
          modalId="email_invite"
          show={true}
          text="Send Email Invite"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemAction
          icon={
            <i
              className="fa fa-link"
            />
          }
          id="getTeamInviteLink"
          onClick={[Function]}
          show={true}
          text="Get Team Invite Link"
        />
      </Connect(TeamPermissionGate)>
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addUsersToTeam"
        modalId="add_user_to_team"
        show={true}
        text="Add Members to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-globe"
          />
        }
        id="teamSettings"
        modalId="team_settings"
        show={true}
        text="Team Settings"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-users"
        />
      }
      id="manageMembers"
      modalId="team_members"
      show={true}
      text="Manage Members"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "create_team",
        ]
      }
    >
      <MenuItemLink
        icon={
          <i
            className="fa fa-plus-square"
          />
        }
        id="createTeam"
        show={true}
        text="Create a New Team"
        to="/create_team"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={
        <i
          className="fa fa-plus-square"
        />
      }
      id="joinTeam"
      show={false}
      text="Join Another Team"
      to="/select_team"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={<LeaveTeamIcon />}
      id="leaveTeam"
      modalId="leave_team"
      show={true}
      text="Leave Team"
    />
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_slash_commands",
          "manage_oauth",
          "manage_incoming_webhooks",
          "manage_outgoing_webhooks",
        ]
      }
      teamId="team-id"
    >
      <MenuItemLink
        id="integrations"
        show={false}
        text="Integrations"
        to="/team name/integrations"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemLink
      id="customEmojis"
      show={false}
      text="Custom Emoji"
      to="/team name/emoji"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "manage_system",
        ]
      }
    >
      <MenuItemLink
        icon={
          <i
            className="fa fa-wrench"
          />
        }
        id="systemConsole"
        show={false}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-question"
        />
      }
      id="helpLink"
      show={true}
      text="Help"
      url="test-link-help"
    />
    <MenuItemAction
      id="keyboardShortcuts"
      onClick={[Function]}
      show={false}
      text="Keyboard Shortcuts"
    />
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-phone"
        />
      }
      id="reportLink"
      show={true}
      text="Report a Problem"
      url="test-report-link"
    />
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-mobile"
        />
      }
      id="nativeAppLink"
      show={true}
      text="Download Apps"
      url="test"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-info"
        />
      }
      id="about"
      modalId="about"
      show={true}
      text="About Mattermost"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="fa fa-sign-out"
        />
      }
      id="logout"
      onClick={[Function]}
      show={true}
      text="Logout"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with plugins 1`] = `
<Menu
  ariaLabel="Main Menu"
  mobile={false}
>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="recentMentions"
      onClick={[Function]}
      show={false}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={false}
      id="flaggedPosts"
      onClick={[Function]}
      show={false}
      text="Flagged Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="accountSettings"
      modalId="user_settings"
      show={true}
      text="Account Settings"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemToggleModalRedux
          dialogType={[Function]}
          icon={false}
          id="sendEmailInvite"
          modalId="email_invite"
          show={false}
          text="Send Email Invite"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemAction
          icon={false}
          id="getTeamInviteLink"
          onClick={[Function]}
          show={false}
          text="Get Team Invite Link"
        />
      </Connect(TeamPermissionGate)>
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="addUsersToTeam"
        modalId="add_user_to_team"
        show={true}
        text="Add Members to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={false}
        id="teamSettings"
        modalId="team_settings"
        show={true}
        text="Team Settings"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={[Function]}
        icon={false}
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="manageMembers"
      modalId="team_members"
      show={true}
      text="Manage Members"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "create_team",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="createTeam"
        show={true}
        text="Create a New Team"
        to="/create_team"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={false}
      id="joinTeam"
      show={false}
      text="Join Another Team"
      to="/select_team"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="leaveTeam"
      modalId="leave_team"
      show={true}
      text="Leave Team"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="plugin-1_pluginmenuitem"
      key="plugin-1_pluginmenuitem"
      onClick={[Function]}
      show={true}
      text="plugin-1-text"
    />
    <MenuItemAction
      icon={false}
      id="plugin-2_pluginmenuitem"
      key="plugin-2_pluginmenuitem"
      onClick={[Function]}
      show={true}
      text="plugin-2-text"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_slash_commands",
          "manage_oauth",
          "manage_incoming_webhooks",
          "manage_outgoing_webhooks",
        ]
      }
      teamId="team-id"
    >
      <MenuItemLink
        id="integrations"
        show={false}
        text="Integrations"
        to="/team name/integrations"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemLink
      id="customEmojis"
      show={false}
      text="Custom Emoji"
      to="/team name/emoji"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "manage_system",
        ]
      }
    >
      <MenuItemLink
        icon={false}
        id="systemConsole"
        show={true}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemExternalLink
      icon={false}
      id="helpLink"
      show={false}
      text="Help"
      url={null}
    />
    <MenuItemAction
      id="keyboardShortcuts"
      onClick={[Function]}
      show={true}
      text="Keyboard Shortcuts"
    />
    <MenuItemExternalLink
      icon={false}
      id="reportLink"
      show={false}
      text="Report a Problem"
      url={null}
    />
    <MenuItemExternalLink
      icon={false}
      id="nativeAppLink"
      show={null}
      text="Download Apps"
      url={null}
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={false}
      id="about"
      modalId="about"
      show={true}
      text="About Mattermost"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="logout"
      onClick={[Function]}
      show={true}
      text="Logout"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with plugins in mobile 1`] = `
<Menu
  ariaLabel="Main Menu"
  mobile={true}
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="mentions"
        >
          @
        </i>
      }
      id="recentMentions"
      onClick={[Function]}
      show={true}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={
        <i
          className="fa fa-flag"
        />
      }
      id="flaggedPosts"
      onClick={[Function]}
      show={true}
      text="Flagged Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-cog"
        />
      }
      id="accountSettings"
      modalId="user_settings"
      show={true}
      text="Account Settings"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemToggleModalRedux
          dialogType={[Function]}
          icon={
            <i
              className="fa fa-user-plus"
            />
          }
          id="sendEmailInvite"
          modalId="email_invite"
          show={false}
          text="Send Email Invite"
        />
      </Connect(TeamPermissionGate)>
      <Connect(TeamPermissionGate)
        permissions={
          Array [
            "invite_user",
          ]
        }
        teamId="team-id"
      >
        <MenuItemAction
          icon={
            <i
              className="fa fa-link"
            />
          }
          id="getTeamInviteLink"
          onClick={[Function]}
          show={false}
          text="Get Team Invite Link"
        />
      </Connect(TeamPermissionGate)>
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addUsersToTeam"
        modalId="add_user_to_team"
        show={true}
        text="Add Members to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-globe"
          />
        }
        id="teamSettings"
        modalId="team_settings"
        show={true}
        text="Team Settings"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={[Function]}
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-users"
        />
      }
      id="manageMembers"
      modalId="team_members"
      show={true}
      text="Manage Members"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "create_team",
        ]
      }
    >
      <MenuItemLink
        icon={
          <i
            className="fa fa-plus-square"
          />
        }
        id="createTeam"
        show={true}
        text="Create a New Team"
        to="/create_team"
      />
    </Connect(SystemPermissionGate)>
    <MenuItemLink
      icon={
        <i
          className="fa fa-plus-square"
        />
      }
      id="joinTeam"
      show={false}
      text="Join Another Team"
      to="/select_team"
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={<LeaveTeamIcon />}
      id="leaveTeam"
      modalId="leave_team"
      show={true}
      text="Leave Team"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon="plugin-1-mobile-icon"
      id="plugin-1_pluginmenuitem"
      key="plugin-1_pluginmenuitem"
      onClick={[Function]}
      show={true}
      text="plugin-1-text"
    />
    <MenuItemAction
      icon="plugin-2-mobile-icon"
      id="plugin-2_pluginmenuitem"
      key="plugin-2_pluginmenuitem"
      onClick={[Function]}
      show={true}
      text="plugin-2-text"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_slash_commands",
          "manage_oauth",
          "manage_incoming_webhooks",
          "manage_outgoing_webhooks",
        ]
      }
      teamId="team-id"
    >
      <MenuItemLink
        id="integrations"
        show={false}
        text="Integrations"
        to="/team name/integrations"
      />
    </Connect(TeamPermissionGate)>
    <MenuItemLink
      id="customEmojis"
      show={false}
      text="Custom Emoji"
      to="/team name/emoji"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          "manage_system",
        ]
      }
    >
      <MenuItemLink
        icon={
          <i
            className="fa fa-wrench"
          />
        }
        id="systemConsole"
        show={false}
        text="System Console"
        to="/admin_console"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-question"
        />
      }
      id="helpLink"
      show={false}
      text="Help"
      url={null}
    />
    <MenuItemAction
      id="keyboardShortcuts"
      onClick={[Function]}
      show={false}
      text="Keyboard Shortcuts"
    />
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-phone"
        />
      }
      id="reportLink"
      show={false}
      text="Report a Problem"
      url={null}
    />
    <MenuItemExternalLink
      icon={
        <i
          className="fa fa-mobile"
        />
      }
      id="nativeAppLink"
      show={null}
      text="Download Apps"
      url={null}
    />
    <MenuItemToggleModalRedux
      dialogType={[Function]}
      icon={
        <i
          className="fa fa-info"
        />
      }
      id="about"
      modalId="about"
      show={true}
      text="About Mattermost"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="fa fa-sign-out"
        />
      }
      id="logout"
      onClick={[Function]}
      show={true}
      text="Logout"
    />
  </MenuGroup>
</Menu>
`;
